# CSL7450-CG-Assignment_1-OpenGL_Basics

./: README.md  compile_all.sh  meson.build
.devcontainer/: .gitignore  Dockerfile  copyenv.sh  devcontainer.json  setup_mingw_glut.sh
.github/workflows/: SetupContainer.yml  release.yml
cross-compile/: x64-windows.ini
src/: meson.build
src/Q1/: MidPointLine.hpp  main.cpp
src/Q2/: DrawTriangle.hpp  main.cpp
src/Q3/: DrawArc.hpp  RadialMousePointHandler.hpp  main.cpp
src/common/: common.hpp  input.hpp  math.hpp  text.hpp  types.hpp  window.hpp
