# common dir.
includes += [include_directories('common')]

# executables
executable('Q1', 'Q1/main.cpp', include_directories: includes, dependencies: deps)
# executable('Q2', 'Q2/main.cpp', include_directories: includes, dependencies: deps)
# executable('Q3', 'Q3/main.cpp', include_directories: includes, dependencies: deps)